# pyCANdle

./: .gitignore  .gitingore  .gitmodules  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  bindings.cpp  generate_pybind_module_registers.py  release.sh  setup.py  test_release.sh  test_release_no_upload.sh
src/pyCandleMAB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
